(library
 (name webview)
 (public_name owebview.webview)
 (foreign_stubs
  (language cxx)
  (names webview_stubs)
  ; extra_deps forces dune to copy the vendored header into the build tree so
  ; the -I below (build-relative) can find it.
  (extra_deps %{workspace_root}/vendor/webview.h)
  ; -std=c++11 plus any platform cflags (e.g. GTK include paths on Linux) are
  ; detected at build time by config/discover.exe.
  (flags
   (:standard
    -I
    ../vendor
    (:include c_flags.sexp))))
 ; Link flags (WebKit/Cocoa frameworks on macOS, GTK/WebKitGTK libs on Linux)
 ; are detected at build time too — see the rule below.
 (c_library_flags
  (:include c_library_flags.sexp)))

; Generate the platform-specific flag files with dune-configurator.
(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
