(executable
 (name d3)
 (libraries webview))

; Stage the web/ assets (including the vendored d3.v7.min.js) next to the built
; binary so the example is self-contained in the build tree, without installing
; them into the opam switch. See Webview.Utils.web_dir.
(alias
 (name all)
 (deps
  (glob_files web/*)))
