(executable
 (name timer)
 (libraries webview threads.posix))

; Stage the web/ assets next to the built binary (_build/.../examples/timer/web/)
; so the example is self-contained in the build tree, without installing them
; into the opam switch. See Webview.Utils.web_dir.
(alias
 (name all)
 (deps
  (glob_files web/*)))
