(executable
 (name timer_posix)
 (modules timer_posix)
 (libraries webview threads.posix))

; Same example, but the threading is driven by Lwt (see async.md): the webview
; event loop runs on a detached preemptive thread while Lwt owns the main
; thread. Requires Lwt to be installed to build.
(executable
 (name timer_lwt)
 (modules timer_lwt)
 (libraries webview lwt.unix threads.posix))

; Stage the web/ assets next to the built binary (_build/.../examples/timer/web/)
; so the example is self-contained in the build tree, without installing them
; into the opam switch. See Webview.Utils.web_dir.
(alias
 (name all)
 (deps
  (glob_files web/*)))
